name:                hierarchical-spectral-clustering
version:             0.1.0.0
synopsis:            Hierarchical spectral clustering of a graph.
description:         Generate a tree of hierarchical spectral clustering using Newman-Girvan modularity as a stopping criteria.
homepage:            http://github.com/GregorySchwartz/hierarchical-spectral-clustering#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@pennmedicine.upenn.edu
copyright:           2017 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Clustering.Hierarchical.Spectral
  build-depends:       base >= 4.7 && < 5
                     , spectral-clustering
                     , modularity
                     , vector
                     , hierarchical-clustering
                     , hmatrix
  ghc-options:         -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/hierarchical-spectral-clustering
