name:                hierarchical-spectral-clustering
version:             0.2.1.0
synopsis:            Hierarchical spectral clustering of a graph.
description:         Generate a tree of hierarchical spectral clustering using Newman-Girvan modularity as a stopping criteria.
homepage:            http://github.com/GregorySchwartz/hierarchical-spectral-clustering#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@pennmedicine.upenn.edu
copyright:           2018 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Clustering.Hierarchical.Spectral.Dense
                     , Math.Clustering.Hierarchical.Spectral.Sparse
                     , Math.Clustering.Hierarchical.Spectral.Types
  other-modules:       Math.Clustering.Hierarchical.Spectral.Test
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , hierarchical-clustering
                     , hmatrix
                     , modularity
                     , sparse-linear-algebra
                     , spectral-clustering
                     , tree-fun
                     , vector
  ghc-options:         -O2
  default-language:    Haskell2010

executable cluster-tree
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , hierarchical-spectral-clustering
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , cassava
                     , containers
                     , hmatrix
                     , managed
                     , mtl
                     , optparse-generic
                     , safe
                     , streaming
                     , streaming-bytestring
                     , streaming-cassava
                     , streaming-with
                     , text
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/hierarchical-spectral-clustering
